--- a/css/principal.css
+++ b/css/principal.css
@@ -19,3 +19,52 @@
 body {
     background-color: var(--bg-color);
 }
+
+/* TÍTULO */
+h1 {
+    text-align: center;
+    font-size: 2.5rem;
+    margin-top: 2rem;
+    color: black;
+    font-weight: bold;
+}
+
+.painel {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    height: 6rem;
+}
+
+.esquerda, 
+.meio, 
+.direita {
+    width: 33%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.esquerda div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: var(--cor-primaria);
+    color: white;
+
+    height: 50%;
+    width: 30%;
+
+    border-radius: 5px;
+}
+
+div a {
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.meio h1 {
+    margin: 0;
+}
